# bazel-experiments

./: .gitignore
docker-run-from-bazel/: BUILD.bazel  README.md  bazel-bin  bazel-docker-run-from-bazel  bazel-out  bazel-testlogs
docker-run-from-bazel/docker/: Dockerfile  docker_rules.bzl  hello.sh
oci/: BUILD.bazel  MODULE.bazel  README.md  deploy.bzl  deploy.sh  run.bzl
oci/app/: BUILD.bazel  app.mjs  control  handler.mjs  test.mjs
oci/deploy/: deploy.sh
oci/examples/simple-app/: BUILD.bazel  app.mjs  test.mjs
