bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "aspect_rules_js", version = "2.6.0")
bazel_dep(name = "rules_nodejs", version = "6.5.0")
bazel_dep(name = "rules_pkg", version = "0.10.1")

## NODE.js stuff:
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    # latest LTS
    node_version = "22.14.0",
)
use_repo(node, "nodejs_toolchains")

# Container stuff
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_node20",  # this makes the label prefix @distroless
    digest = "sha256:e8a4044e0b4ae4257efa45fc026c0bc30ad320d43bd4c1a7d5271bd241e386d0",
    image = "gcr.io/distroless/nodejs20-debian12",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],

    # choose exactly one of these:
    tag = "nonroot",  # easy, but not reproducible
)

# Expose the pulled repo to this module
use_repo(oci, "distroless_node20", "distroless_node20_linux_amd64", "distroless_node20_linux_arm64_v8")
