bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "aspect_rules_js", version = "2.6.0")
bazel_dep(name = "rules_nodejs", version = "6.5.0")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name ="platforms", version = "1.0.0")
## NODE.js stuff:
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    # latest LTS
    node_version = "22.14.0",
)
use_repo(node, "nodejs_toolchains")

# Container stuff
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_node20",
    digest = "sha256:adce8f03e2b82454f0e36843879529ad8d2d1e6cc43ce26ff6124f04ab84a6cd",
    image = "gcr.io/distroless/nodejs20-debian12",
    tag = "latest",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
oci.pull(
    name = "distroless_node20_debug",
    digest = "sha256:adce8f03e2b82454f0e36843879529ad8d2d1e6cc43ce26ff6124f04ab84a6cd",
    image = "gcr.io/distroless/nodejs20-debian12",
    tag = "debug",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
# Expose the pulled repo to this module
use_repo(oci, "distroless_node20", "distroless_node20_linux_amd64", "distroless_node20_linux_arm64_v8")
