load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test", "js_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//:deploy.bzl", "deploy")

js_library(
  name = "app",
  srcs = ["app.mjs"]
)

js_binary(
  name = "app.bin",
  entry_point = "app.mjs"
)

pkg_tar(
    name = "app.tar",
    srcs = [":app"],
    strip_prefix = "/",
    package_dir = "/",
    allow_duplicates_with_different_content = False
)

oci_image(
    name = "app.image",
    base = select({
      "@platforms//cpu:arm64":  "@distroless_node20_linux_arm64_v8//:image",
      "@platforms//cpu:x86_64": "@distroless_node20_linux_amd64//:image",
    }),
    tars = [":app.tar"],
    workdir = "/app",
    user = "nonroot:nonroot",
    env = {"PATH": "/nodejs/bin"},
    entrypoint = ["node", "/app/app.mjs"],
)

deploy(
  name =  "deploy",
  image = ":app.image",
  repo_tag = "iamstef.net/app:latest",
)
