load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test", "js_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//:deploy.bzl", "deploy")

filegroup(
  name = "app.files",
  srcs = [
    "app.mjs",
    "handler.mjs",
  ],
)

js_binary(
  name = "app.bin",
  entry_point = "app.mjs",
  data = [":app.files"],
)

js_test(
  name = "app.test",
  entry_point = "test.mjs",
)

pkg_tar(
    name = "app.tar",
    srcs = [":app.files"],
    strip_prefix = "/",
    package_dir = "/",
    allow_duplicates_with_different_content = False
)

oci_image(
    name = "app.image",
    base = "@distroless_node20//:distroless_node20",
    tars = [":app.tar"],          # must contain /app/app.mjs
    workdir = "/app",
    user = "nonroot:nonroot",
    entrypoint = ["/nodejs/bin/node", "/app/app.mjs"],
)

deploy(
  name =  "deploy",
  image = ":app.image",
  repo_tag = "iamstef.net/app:latest",
)
